--- a/client/src/components/tests-list/index.css
+++ b/client/src/components/tests-list/index.css
@@ -4,3 +4,26 @@
     border-color: #ff9631;
     outline-color: #000000;
 }
+
+.header{
+    width: 100%;
+    height: 10%;
+    overflow-y: auto;
+    margin-bottom: 0%;
+}
+
+.list{
+    padding-left: 0;
+    margin-bottom: 0;
+    position: absolute;
+    width: 99.9%;
+    max-height: 100%!important;
+    overflow-y: scroll;
+    left: 1px;
+}
+
+.bodyList{
+    position: absolute;
+    height: 82%;
+    width: 100%;
+}
