--- a/client/src/components/tasks/index.css
+++ b/client/src/components/tasks/index.css
@@ -35,6 +35,11 @@
     right: 2%;
 }
 
+.button-right2{
+    position: absolute;
+    right: 20%;
+}
+
 .button{
     background-color: rgb(255, 129, 0) !important;
     font-weight: bold;
@@ -96,4 +101,18 @@
     font-size: 3vh;
     top:1%;
     width: 90%;
+}
+
+.labelText{
+    position: absolute;
+    right: 40%;
+    color: white;
+    background: rgba(0,0,0,0);
+    resize: none;
+    border: 0;
+    text-align:right;
+}
+
+.labelText:focus{
+    outline: none;
 }
